--- a/website/content/api-docs/secret/kubernetes.mdx
+++ b/website/content/api-docs/secret/kubernetes.mdx
@@ -108,7 +108,7 @@ A role configures what service account tokens can be generated, and what
 permissions will be attached to them. The permissions attached to a service
 account token depend on the Kubernetes roles applied to its service account.
 
-Each Kubernetes secret engine role can operate in one of 3 modes. Each successive
+Each Kubernetes secrets engine role can operate in one of 3 modes. Each successive
 mode generates more Kubernetes objects, and therefore requires more permissions
 for Vault's own Kubernetes service account.
 
