--- a/website/content/api-docs/secret/kubernetes.mdx
+++ b/website/content/api-docs/secret/kubernetes.mdx
@@ -305,7 +305,7 @@ Fetch a service account token.
 - `ttl` `(string: "")` - The TTL of the generated Kubernetes service account token,
   specified in seconds or as a Go duration format string, e.g. `"1h"`. The TTL
   returned may be different from the TTL specified due to limits specified in
-  Kubernetes, Vault system-wide controls or role-specific controls.
+  Kubernetes, Vault system-wide controls, or role-specific controls.
 
 ### Sample Payload
 
