Add template link

--- a/website/content/api-docs/secret/kubernetes.mdx
+++ b/website/content/api-docs/secret/kubernetes.mdx
@@ -147,7 +147,8 @@ Only one of `service_account_name`, `kubernetes_role_name` or
   entire chain of Kubernetes objects will be generated.
 - `name_template` `(string: "")` - The name template to use when generating
   service accounts, roles and role bindings. If unset, a default template is
-  used.
+  used. See [username templating](https://www.vaultproject.io/docs/concepts/username-templating)
+  for details on how to write a custom template.
 - `additional_metadata` `(map: {})` - Additional labels and annotations to
   apply to all generated object in Kubernetes.
 
@@ -165,7 +166,7 @@ To generate tokens for a pre-existing service account:
 
 ### Sample Payload 2
 
-To generate tokens for a pre-existing role:
+To generate tokens for a pre-existing ClusterRole:
 
 ```json
 {
