--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -31,14 +31,11 @@ The core Vault worklflow consists of four stages:
 * **Authorize**: Client is matched against the Vault security policy.  This policy is a set of rules that direct which API endpoints a client has access to in a construct, using a Vault token.
 * **Access**: Vault provides access to secrets, keys, and encryption capabilities based on policies associated with the client’s identity.
 
-![Vault Workflow](/img/vault-workflow.png)
+![Vault Workflow](/img/vault-workflow2.png)
 
 ### Why Vault?
 
-HashiCorp co-founder and CTO Armon Dadgar explains how Vault supports dynamic infrastructure that securely protects secrets and sensitive data.
-
-<iframe src="https://www.youtube.com/watch?v=VYfl-DpZ5wM" frameborder="0" allowfullscreen="true"  width="560" height="315" ></iframe>
-
+TBD 
 The key features of Vault are:
 
 - **Secure Secret Storage**: Arbitrary key/value secrets can be stored
