fix hash function description

--- a/website/content/api-docs/secret/transit.mdx
+++ b/website/content/api-docs/secret/transit.mdx
@@ -104,9 +104,10 @@ returned by Vault and the encryption of the import key material under the
 provided AES key. The wrapped AES key should be the first 512 bytes of the
 ciphertext, and the encrypted key material should be the remaining bytes.
 
-- `hash_function` `(string: <required>)` - The hash function used for the
+- `hash_function` `(string: "SHA-256")` - The hash function used for the
 RSA-OAEP step of creating the ciphertext. Supported hash functions are:
-`SHA-1`, `SHA-224`, `SHA-256`, `SHA-384`, and `SHA-512`.
+`SHA-1`, `SHA-224`, `SHA-256`, `SHA-384`, and `SHA-512`. If not specified,
+the hash function defaults to SHA-256.
 
 - `type` `(string: <required>)` – Specifies the type of key to create. The
   currently-supported types are:
@@ -189,9 +190,10 @@ ciphertext, and the encrypted key material should be the remaining bytes.
 See the BYOK section of the [Transit secrets engine documentation](/docs/secret/transit)
 for more information on constructing the ciphertext.
 
-- `hash_function` `(string: <required>)` - The hash function used for the
+- `hash_function` `(string: "SHA-256")` - The hash function used for the
 RSA-OAEP step of creating the ciphertext. Supported hash functions are:
-`SHA-1`, `SHA-224`, `SHA-256`, `SHA-384`, and `SHA-512`.
+`SHA-1`, `SHA-224`, `SHA-256`, `SHA-384`, and `SHA-512`. If not specified,
+the hash function defaults to SHA-256.
 
 ### Sample Payload
 
