Be more specific about AWS PKCS7 signatures being for DSA

--- a/website/content/docs/deprecation/faq.mdx
+++ b/website/content/docs/deprecation/faq.mdx
@@ -46,6 +46,6 @@ This workaround will fail in a future version of Go, but the Go team has not sai
 
 Here are the use cases we that might use certificates with SHA-1 still:
 
-- AWS Credential Plugin: AWS [still supports SHA-1 signatures](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-identity-documents.html).
+- AWS Credential Plugin: [AWS](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-identity-documents.html) can use SHA-1-based PKCS7 signatures for DSA key pairs.
 
 We will update this list as we do further research.
