--- a/website/content/docs/deprecation/faq.mdx
+++ b/website/content/docs/deprecation/faq.mdx
@@ -42,7 +42,7 @@ Starting with Vault 1.12.0, Vault will be built with Go 1.18.
 The Go 1.18 standard library [rejects X.509 certificates](https://tip.golang.org/doc/go1.18#sha1) whose signatures use a SHA-1 hash.
 
 If this issue impacts your usage of Vault, you can temporarily work around it by deploying Vault with the environment variable `GODEBUG=x509sha1=1` set.
-This workaround will fail in a future version of Go, but the Go team has not said when.
+This workaround will fail in a future version of Go, however, the Go team has not said when they will remove this workaround.
 
 Here are the use cases we that might use certificates with SHA-1 still:
 
