--- a/website/content/docs/deprecation/faq.mdx
+++ b/website/content/docs/deprecation/faq.mdx
@@ -44,7 +44,7 @@ The Go 1.18 standard library [rejects X.509 certificates](https://tip.golang.org
 If this issue impacts your usage of Vault, you can temporarily work around it by deploying Vault with the environment variable `GODEBUG=x509sha1=1` set.
 This workaround will fail in a future version of Go, however, the Go team has not said when they will remove this workaround.
 
-Here are the use cases we that might use certificates with SHA-1 still:
+Here are the use cases that may still use certificates with SHA-1:
 
 - AWS Credential Plugin: [AWS](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-identity-documents.html) can use SHA-1-based PKCS7 signatures for DSA key pairs.
 
