Add links and split metadata parameter into labels and annotations

--- a/website/content/api-docs/secret/kubernetes.mdx
+++ b/website/content/api-docs/secret/kubernetes.mdx
@@ -136,23 +136,35 @@ Only one of `service_account_name`, `kubernetes_role_name` or
   If not set or set to 0, will use system default.
 - `service_account_name` `(string: "")` - The pre-existing service account to
   generate tokens for. Mutually exclusive with all role parameters. If set, only
-  a Kubernetes token will be created.
+  a Kubernetes token will be created. See the
+  [Kubernetes service account documentation](https://kubernetes.io/docs/reference/access-authn-authz/service-accounts-admin/)
+  for more details.
 - `kubernetes_role_name` `(string: "")` - The pre-existing Role or ClusterRole
   to bind a generated service account to. If set, Kubernetes token, service
-  account, and role binding objects will be created.
+  account, and role binding objects will be created. See the
+  [Kubernetes roles documentation](https://kubernetes.io/docs/reference/access-authn-authz/rbac/#role-and-clusterrole)
+  for more details.
 - `kubernetes_role_type` `(string: "Role")` - Specifies whether the Kubernetes
   role is a `Role` or `ClusterRole`.
 - `generated_role_rules` `(string: "")` - The Role or ClusterRole rules to use
-  when generating a role. Accepts either a JSON or YAML object. If set, the
-  entire chain of Kubernetes objects will be generated.
+  when generating a role. Accepts either JSON or YAML formatted rules. If set, the
+  entire chain of Kubernetes objects will be generated. The value should be the
+  `rules` key and an array of [PolicyRule](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#policyrule-v1-rbac-authorization-k8s-io)
+  objects, as illustrated in the
+  [Kubernetes RBAC documentation](https://kubernetes.io/docs/reference/access-authn-authz/rbac/)
+  and [Sample Payload 3](/api-docs/secret/kubernetes#sample-payload-3) below.
 - `name_template` `(string: "")` - The name template to use when generating
   service accounts, roles and role bindings. If unset, a default template is
   used. See [username templating](https://www.vaultproject.io/docs/concepts/username-templating)
   for details on how to write a custom template.
-- `additional_metadata` `(map: {})` - Additional labels and annotations to
-  apply to all generated object in Kubernetes.
+- `extra_annotations` `(map<string|string>: nil)` - Additional annotations to
+  apply to all generated object in Kubernetes. See the [Kubernetes annotations documentation](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/)
+  for more details.
+  - `extra_labels` `(map<string|string>: nil)` - Additional labels to apply to
+  all generated object in Kubernetes. See the [Kubernetes labels documentation](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/)
+  for more details.
 
-### Sample Payload
+### Sample Payload 1
 
 To generate tokens for a pre-existing service account:
 
@@ -184,6 +196,15 @@ To generate tokens for a defined set of Kubernetes role rules:
 {
   "allowed_kubernetes_namespaces": "*",
   "generated_role_rules": "rules:\n- apiGroups: [\"\"]\n  resources: [\"pods\"]\n  verbs: [\"list\"]\n",
+}
+```
+
+Or to define the same rules as JSON:
+
+```json
+{
+  "allowed_kubernetes_namespaces": "*",
+  "generated_role_rules": "'rules': [{'apiGroups': ['],'resources': ['pods'],'verbs': ['list']}]"
 }
 ```
 
