--- a/website/content/api-docs/secret/kubernetes.mdx
+++ b/website/content/api-docs/secret/kubernetes.mdx
@@ -26,14 +26,14 @@ Kubernetes API and authenticate with it.
 ### Parameters
 
 - `kubernetes_host` `(string: "https://$KUBERNETES_SERVICE_HOST:KUBERNETES_SERVICE_PORT")` -
-  Kubernetes API URL to connect to. Must be specified if `KUBERNETES_SERVICE_HOST` or
-  `KUBERNETES_SERVICE_PORT` environment variables are not set.
-- `kubernetes_ca_cert` `(string: "")` - PEM encoded CA certificate for the secret
-  engine to verify the Kubernetes API server certificate. Defaults to the local
-  pod's CA certificate at `/var/run/secrets/kubernetes.io/serviceaccount/ca.crt`
-  if found, or otherwise the host's root CA set.
+  Kubernetes API URL to connect to. Must be specified if the standard pod environment
+  variables `KUBERNETES_SERVICE_HOST` or `KUBERNETES_SERVICE_PORT` are not set.
+- `kubernetes_ca_cert` `(string: "")` - PEM encoded CA certificate to verify the
+  Kubernetes API server certificate. Defaults to the local pod's CA certificate
+  at `/var/run/secrets/kubernetes.io/serviceaccount/ca.crt` if found, or
+  otherwise the host's root CA set.
 - `service_account_jwt` `(string: "")` - The JSON web token of the service account
-  used by the secret engine to manage Kubernetes roles. Defaults to the local pod's
+  used by the secrets engine to manage Kubernetes credentials. Defaults to the local pod's
   JWT at `/var/run/secrets/kubernetes.io/serviceaccount/token` if found.
 - `disable_local_ca_jwt` `(bool: false)` - Disable defaulting to the local CA
   certificate and service account JWT when running in a Kubernetes pod.
@@ -126,30 +126,32 @@ Only one of `service_account_name`, `kubernetes_role_name` or
 ### Parameters
 
 - `name` `(string: <required>)` - The name of the role. Included in the path.
-- `allowed_kubernetes_namespaces` `(array: <required>)` - List of service account
-  names able to access this role. If set to `"*"` all namespaces are allowed.
-- `token_max_ttl` `(string: "")` - The maximum valid TTL for generated Kubernetes
+- `allowed_kubernetes_namespaces` `(array: <required>)` - The list of Kubernetes
+  namespaces this role can generate credentials for. If set to `"*"` all
+  namespaces are allowed.
+- `token_max_ttl` `(string: "")` - The maximum TTL for generated Kubernetes
   tokens, specified in seconds or as a Go duration format string, e.g. `"1h"`.
-  If not set or set to 0, will use system default.
+  If not set or set to 0, the [system default](/docs/configuration#max_lease_ttl) will be used.
 - `token_default_ttl` `(string: "")` - The default TTL for generated Kubernetes
   tokens, specified in seconds or as a Go duration format string, e.g. `"1h"`.
-  If not set or set to 0, will use system default.
+  If not set or set to 0, the [system default](/docs/configuration#default_lease_ttl) will be used.
 - `service_account_name` `(string: "")` - The pre-existing service account to
   generate tokens for. Mutually exclusive with all role parameters. If set, only
-  a Kubernetes token will be created. See the
+  a Kubernetes token will be created when credentials are requested. See the
   [Kubernetes service account documentation](https://kubernetes.io/docs/reference/access-authn-authz/service-accounts-admin/)
-  for more details.
+  for more details on service accounts.
 - `kubernetes_role_name` `(string: "")` - The pre-existing Role or ClusterRole
   to bind a generated service account to. If set, Kubernetes token, service
-  account, and role binding objects will be created. See the
-  [Kubernetes roles documentation](https://kubernetes.io/docs/reference/access-authn-authz/rbac/#role-and-clusterrole)
-  for more details.
+  account, and role binding objects will be created when credentials are requested.
+  See the [Kubernetes roles documentation](https://kubernetes.io/docs/reference/access-authn-authz/rbac/#role-and-clusterrole)
+  for more details on Kubernetes roles.
 - `kubernetes_role_type` `(string: "Role")` - Specifies whether the Kubernetes
   role is a `Role` or `ClusterRole`.
 - `generated_role_rules` `(string: "")` - The Role or ClusterRole rules to use
   when generating a role. Accepts either JSON or YAML formatted rules. If set, the
-  entire chain of Kubernetes objects will be generated. The value should be the
-  `rules` key and an array of [PolicyRule](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#policyrule-v1-rbac-authorization-k8s-io)
+  entire chain of Kubernetes objects will be generated when credentials are
+  requested. The value should be a `rules` key with an array of
+  [PolicyRule](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.23/#policyrule-v1-rbac-authorization-k8s-io)
   objects, as illustrated in the
   [Kubernetes RBAC documentation](https://kubernetes.io/docs/reference/access-authn-authz/rbac/)
   and [Sample Payload 3](/api-docs/secret/kubernetes#sample-payload-3) below.
@@ -158,11 +160,13 @@ Only one of `service_account_name`, `kubernetes_role_name` or
   used. See [username templating](https://www.vaultproject.io/docs/concepts/username-templating)
   for details on how to write a custom template.
 - `extra_annotations` `(map<string|string>: nil)` - Additional annotations to
-  apply to all generated object in Kubernetes. See the [Kubernetes annotations documentation](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/)
-  for more details.
-  - `extra_labels` `(map<string|string>: nil)` - Additional labels to apply to
-  all generated object in Kubernetes. See the [Kubernetes labels documentation](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/)
-  for more details.
+  apply to all generated Kubernetes objects. See the
+  [Kubernetes annotations documentation](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/)
+  for more details on annotations.
+- `extra_labels` `(map<string|string>: nil)` - Additional labels to apply to
+  all generated Kubernetes objects. See the
+  [Kubernetes labels documentation](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/)
+  for more details on labels.
 
 ### Sample Payload 1
 
@@ -310,7 +314,7 @@ $ curl \
 
 ## Generate Credentials
 
-Fetch a service account token.
+Generate a service account token.
 
 | Method | Path                      |
 | :----- | :------------------------ |
