--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -24,7 +24,7 @@ where Vault steps in.
 
 Vault validates, authorizes, and provides clients (users, machines, apps) access to secrets or stored sensitive data. The core Vault worklflow consists of four stages:
 
-![Vault Workflow](/img/vault-workflow-diagram2.png)
+![Vault Workflow](/img/vault-workflow-diagram1.png)
 
 * **Authenticate:** Client (users, apps, systems) authenticate with Vault using their identity.
 * **Validation:** Vault validates the client against third-party trusted sources.
@@ -33,7 +33,7 @@ Vault validates, authorizes, and provides clients (users, machines, apps) access
 
 ### Why Vault?
 
-Most enterprises today have credentials sprawled across their organizations, such as passwords, API keys, credentials that are in plain text, app source code, config files, and more. Since these credentials live everywhere, the sprawl can lead enterprises to a state where it's difficult and daunting to really know who has access and authorization to what. Further, having credentials in plain text increases the potential for malicious attacks, both by internal and external attackers. Vault was designed with these challenges in mind by helping you take all these credentials and centralize them so they are defined in one location, thereby, reducing unwanted exposure to credentials. But, Vault takes a few steps further by making sure clients (users, apps, systems) are authenticated and explicitely authorized to access resources while an audit trail can provide a history of client actions.
+Most enterprises today have credentials sprawled across their organizations, such as passwords, API keys, credentials that are in plain text, app source code, config files, and more. Since these credentials live everywhere, the sprawl can lead enterprises to a state where it's difficult and daunting to really know who has access and authorization to what. Further, having credentials in plain text increases the potential for malicious attacks, both by internal and external attackers. Vault was designed with these challenges in mind by helping you take all these credentials and centralize them so they are defined in one location, thereby, reducing unwanted exposure to credentials. But, Vault takes it a few steps further by making sure clients (users, apps, systems) are authenticated and explicitely authorized to access resources while an audit trail can provide a history of client actions.
 
 The key features of Vault are:
 
@@ -71,9 +71,9 @@ The key features of Vault are:
 
 HashiCorp Cloud Platform (HCP) Vault is a hosted version of Vault, which is operated by HashiCorp to allow organizations to get up and running quickly. HCP Vault uses the same binary as self-hosted Vault, which means you will have a consistent user experience. You can use the same Vault clients to communicate with HCP Vault as you use to communicate with a self-hosted Vault.
 
--> To learn more about HCP Vault, see the [HCP Vault documentation](https://cloud.hashicorp.com/docs/vault). You can also get started with HCP Vault by using the HCP portal to set up your managed Vault cluster. Refer to the [Getting Started with HCP Vault](https://learn.hashicorp.com/collections/vault/cloud) tutorial.
+-> **Tip:** Learn more about [HCP Vault](https://cloud.hashicorp.com/docs/vault) or get started with [HCP Vault](https://learn.hashicorp.com/collections/vault/cloud).
 
-### Why is HCP Vault?
+### Why HCP Vault?
 
 Vault running on the HashiCorp Cloud Platform (HCP) enables users to secure, store, and tightly control access to tokens, passwords, certificates, and encryption keys within one unified cloud-based platform.
 
@@ -123,7 +123,7 @@ Enterprise and HCP Vault.
 | Audit Logging by default                      |              | ✔️               |
 | Snapshots & Restore                           |              | ✔️               |
 
--> **Note:** For the self-managed Vault Enterprise clusters, audit logging is a
+~> **Note:** For the self-managed Vault Enterprise clusters, audit logging is a
 manual configuration. Similarly, if your self-managed Vault is running Vault
 with Integrated Storage, you can configure an automatic data snapshot; however,
 it is a manual process to configure it yourself while it is automated for HCP
