--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -71,7 +71,7 @@ The key features of Vault are:
 
 HashiCorp Cloud Platform (HCP) Vault is a hosted version of Vault, which is operated by HashiCorp to allow organizations to get up and running quickly. HCP Vault uses the same binary as self-hosted Vault, which means you will have a consistent user experience. You can use the same Vault clients to communicate with HCP Vault as you use to communicate with a self-hosted Vault.
 
--> **Tip:** Learn more about [HCP Vault](https://cloud.hashicorp.com/docs/vault) or get started with [HCP Vault](https://learn.hashicorp.com/collections/vault/cloud).
+-> **Tip:** Learn more about [HCP Vault](https://cloud.hashicorp.com/docs/vault) or [get started](https://learn.hashicorp.com/collections/vault/cloud) by setting up a managed Vault cluster.
 
 ### Why HCP Vault?
 
