--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -33,7 +33,7 @@ Vault validates, authorizes, and provides clients (users, machines, apps) access
 
 ### Why Vault?
 
-Most enterprises today have credentials sprawled across their organizations, such as passwords, API keys, credentials that are in plain text, app source code, config files, and more. Since these credentials live everywhere, the sprawl can lead enterprises to a state where it's difficult and daunting to really know who has access and authorization to what. Further, having credentials in plain text increases the potential for malicious attacks, both by internal and external attackers. Vault was designed with these challenges in mind by helping you take all these credentials and centralize them so they are defined in one location, thereby, reducing unwanted exposure to credentials. But, Vault takes it a few steps further by making sure clients (users, apps, systems) are authenticated and explicitely authorized to access resources while an audit trail can provide a history of client actions.
+Most enterprises today have credentials sprawled across their organizations, such as passwords, API keys, credentials that are in plain text, app source code, config files, and more. Since these credentials live everywhere, the sprawl can lead enterprises to a state where it's difficult and daunting to really know who has access and authorization to what. Further, having credentials in plain text increases the potential for malicious attacks, both by internal and external attackers. Vault was designed with these challenges in mind by helping you take all these credentials and centralize them so they are defined in one location, thereby, reducing unwanted exposure to credentials. But, Vault takes it a few steps further by making sure clients (users, apps, systems) are authenticated and explicitly authorized to access resources while providing an audit trail that captures and preserves a history of client actions.
 
 The key features of Vault are:
 
