add security note

--- a/website/content/docs/secrets/transit.mdx
+++ b/website/content/docs/secrets/transit.mdx
@@ -232,10 +232,11 @@ the proper permission, it can use this secrets engine.
     data, since the process would not be able to get access to the plaintext
     data.
 
-## BYOK
+## Bring Your Own Key (BYOK)
 
-The transit secrets engine supports importing key material from external sources into
-transit keys.
+*Note:* Key import functionality supports cases in which there is a need to bring
+in an existing key from an HSM or other outside system. It is more secure to
+have Transit generate and manage a key within Vault.
 
 First, the wrapping key needs to be read from transit:
 
