--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -95,8 +95,8 @@ The benefits of HCP Vault are:
 - **Day-Zero readiness:** Modern cloud security to quickly secure applications,
   acess, and data from day zero
 
-- **Reliability:** HashiCorp have supported thousands of commercial Vault
-  clusters and HCP Vault brings that expertise directly to users
+- **Reliability:** HashiCorp has experience supporting thousands of commercial Vault
+  clusters and HCP Vault brings that expertise directly to users.
 
 - **Ease of use:** HCP Vault is built around making cloud security automation
   simple. Get up and running instantly and onboard applications and teams easily
