--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -92,8 +92,8 @@ The benefits of HCP Vault are:
 - **Control cost:** Reduce the number of systesm, licenses, and manual overhead
   by centralizing secrets management with HCP Vault
 
-- **Day-Zero readiness:** Modern cloud security to quickly secure applications,
-  acess, and data from day zero
+- **Day zero readiness:** Modern cloud security to quickly secure applications,
+  access, and data from day zero.
 
 - **Reliability:** HashiCorp has experience supporting thousands of commercial Vault
   clusters and HCP Vault brings that expertise directly to users.
