--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -99,7 +99,7 @@ The benefits of HCP Vault are:
   clusters and HCP Vault brings that expertise directly to users.
 
 - **Ease of use:** HCP Vault is built around making cloud security automation
-  simple. Get up and running instantly and onboard applications and teams easily
+  simple. Get up and running instantly so that you can onboard applications and teams easily.
 
 ### Feature parity
 
