--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -127,9 +127,7 @@ Enterprise and HCP Vault.
 
 ~> **Note:** For the self-managed Vault Enterprise clusters, audit logging is a
 manual configuration. Similarly, if your self-managed Vault is running Vault
-with Integrated Storage, you can configure an automatic data snapshot; however,
-it is a manual process to configure it yourself while it is automated for HCP
-Vault.
+with Integrated Storage, you can configure an automatic data snapshot. However, HCP Vault automates the audit logging process.
 
 
 ### Community
