--- a/website/content/docs/secrets/transit.mdx
+++ b/website/content/docs/secrets/transit.mdx
@@ -254,7 +254,7 @@ as described below. In the below, the target key refers to the key being importe
 If the key is being imported from an HSM that supports PKCS#11, there are
 two possible scenarios:
 
-- If the HSM supports the CKM_RSA_AES_KEY_WRAP mechanism, that can be used to wrap the
+- If the HSM supports the CKM_AES_KEY_WRAP_KWP mechanism, that can be used to wrap the
 target key using the wrapping key.
 
 - Otherwise, two mechanisms can be combined to wrap the target key. First, an AES key should
