--- a/website/content/api-docs/system/storage/raftautopilot.mdx
+++ b/website/content/api-docs/system/storage/raftautopilot.mdx
@@ -84,7 +84,7 @@ $ curl \
 ```
 
 ### Enterprise Only
-Vault Enterprise will include additional output in its API response, to indicate the current state of redundancy zones,
+Vault Enterprise will include additional output in its API response to indicate the current state of redundancy zones,
 automated upgrade progress (if any), and optimistic failure tolerance.
 
 #### Sample Response (Enterprise)
