--- a/website/content/api-docs/system/storage/raftautopilot.mdx
+++ b/website/content/api-docs/system/storage/raftautopilot.mdx
@@ -190,7 +190,7 @@ $ curl \
 }
 ```
 
-Note that in the above sample response, `disable_upgrade_migration` is an Enterprise only field.
+Note that in the above sample response, `disable_upgrade_migration` is an Enterprise-only field.
 
 ## Set Configuration
 
