--- a/website/content/api-docs/system/storage/raftautopilot.mdx
+++ b/website/content/api-docs/system/storage/raftautopilot.mdx
@@ -250,4 +250,4 @@ $ curl \
 }
 ```
 
-Note that in the above sample payload, `disable_upgrade_migration` is an Enterprise only field.
+Note that in the above sample payload, `disable_upgrade_migration` is an Enterprise-only field.
