--- a/website/content/docs/commands/operator/members.mdx
+++ b/website/content/docs/commands/operator/members.mdx
@@ -25,7 +25,7 @@ josh-C02ZT9DYMD6R    http://127.0.0.4:8200    https://127.0.0.4:8201    false   
 josh-C02ZT9DYMD6R    http://127.0.0.5:8200    https://127.0.0.5:8201    false          1.11.0     1.12.0             a                  2022-05-23T15:51:20-07:00
 ~
 ```
-Note that in the above output, `Upgrade Version` and `Redundancy Zone` are Enterprise only fields.
+Note that in the above output, `Upgrade Version` and `Redundancy Zone` are Enterprise-only fields.
 
 ## Usage
 
