--- a/website/content/docs/concepts/integrated-storage/autopilot.mdx
+++ b/website/content/docs/concepts/integrated-storage/autopilot.mdx
@@ -9,7 +9,7 @@ description: Learn about the autopilot subsystem of integrated raft storage in V
 Autopilot enables automated workflows for managing Raft clusters. The current
 feature set includes 3 main features: Server Stabilization, Dead Server Cleanup
 and State API. These three features were introduced in Vault 1.7. The Enterprise
-feature set includes 2 main features: Automated Upgrades, and Redundancy Zones.
+feature set includes 2 main features: Automated Upgrades and Redundancy Zones.
 These two features were introduced in Vault 1.11.
 
 ## Server Stabilization
