--- a/website/content/docs/concepts/integrated-storage/autopilot.mdx
+++ b/website/content/docs/concepts/integrated-storage/autopilot.mdx
@@ -69,7 +69,7 @@ behavior. Autopilot gets initialized with the following default values.
 
 ## Automated Upgrades
 
-This capability automatically upgrades a cluster of Vault nodes to a new version as
+Automated Upgrades lets you automatically upgrade a cluster of Vault nodes to a new version as
 updated server nodes join the cluster. Once the number of nodes on the new version is
 equal to or greater than the number of nodes on the old version, Autopilot will promote
 the newer versioned nodes to voters, demote the older versioned nodes to non-voters,
