--- a/website/content/docs/concepts/integrated-storage/autopilot.mdx
+++ b/website/content/docs/concepts/integrated-storage/autopilot.mdx
@@ -74,7 +74,7 @@ updated server nodes join the cluster. Once the number of nodes on the new versi
 equal to or greater than the number of nodes on the old version, Autopilot will promote
 the newer versioned nodes to voters, demote the older versioned nodes to non-voters,
 and initiate a leadership transfer from the older version leader to one of the newer
-versioned nodes. After the leadership transfer finishes, the older versioned non-voting
+versioned nodes. After the leadership transfer completes, the older versioned non-voting
 nodes can be removed from the cluster.
 
 ## Redundancy Zones
