--- a/website/content/docs/enterprise/automated-upgrades.mdx
+++ b/website/content/docs/enterprise/automated-upgrades.mdx
@@ -7,7 +7,7 @@ description: |-
 
 # Automated Upgrades
 
--> **Note**: This feature requires [Vault Enterprise](https://www.hashicorp.com/products/vault/)
+~> **Note**: Automated Upgrades requires [Vault Enterprise](https://www.hashicorp.com/products/vault/) to be 
 configured to use Integrated Storage.
 
 Vault Enterprise Automated Upgrades allows operators to upgrade the version of Vault running in
