Add note about X.509 SHA-1 deprecation to relevant plugins

--- a/website/content/docs/secrets/kmip.mdx
+++ b/website/content/docs/secrets/kmip.mdx
@@ -8,6 +8,8 @@ description: |-
 
 # KMIP Secrets Engine
 
+@include 'x509-sha1-deprecation.mdx'
+
 -> **Note**: This secret engine requires [Vault Enterprise](https://www.hashicorp.com/products/vault/)
 with the Advanced Data Protection Module.
 
